--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   web_socket_channel: ^3.0.1
   eventify: ^1.0.1
   uuid: ^4.2.2
+  web: ^1.1.1
+  
 
 dev_dependencies:
   flutter_test:
